# inoplatforms

./: .codespellrc  .ecrc  .gitignore  .markdown-link-check.json  .prettierignore  .prettierrc.yml  .svglintrc.js  .travis.yml  README.md  Taskfile.yml  go.mod  go.sum  ino-hardware-package-list.tsv  package-lock.json  package.json  pyproject.toml  registry.yml  tools.go
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: check-files-task.yml  check-general-formatting-task.yml  check-general-formatting.yml  check-go-task.yml  check-hugo-task.yml  check-license.yml  check-markdown-task.yml  check-npm-task.yml  check-poetry-task.yml  check-prettier-formatting-task.yml  check-svg-task.yml  check-tsv.yml  check-workflows-task.yml  check-workflows.yml  check-yaml-task.yml  deploy-hugo-task.yml  spell-check-task.yml  sync-labels-npm.yml  sync-labels.yml
data-generator/: go.mod  go.sum  main.go
data-generator/internal/cli/: cli.go
data-generator/internal/command/: command.go
data-generator/internal/data/: data.go
data-generator/internal/packageindex/: packageindex.go
data-generator/internal/registry/: registry.go
data-generator/internal/search/: search.go
data-generator/internal/site/: site.go
docs/: CONTRIBUTING.md  acknowledgments.md
generator/: README.md  go.mod  go.sum  main.go
generator/data/: README.md  data.go
generator/internal/cli/: cli.go
generator/internal/data/: data.go
generator/internal/packageindex/: packageindex.go
generator/internal/search/: search.go
generator/internal/site/: site.go
registry/: README.md  registry.yml
registry/assets/: README.md  schema.json
registry/assets/go-registry/: README.md  go.mod  (+1 more)
site/: README.md  go.mod  go.sum  hugo.yml
site/content/: _index.md
site/data/: generator-data.json
site/static/: README.md
(+26 files in other folders)
