[tool.poetry]
name = "inoplatforms"
version = "0.0.0"
description = ""
authors = ["per1234 <nope@example.com>"]

[tool.poetry.dependencies]
python = "3.11.*"

[tool.poetry.group.dev.dependencies]
codespell = "2.2.6"
svgcheck = "0.7.1"
yamllint = "1.34.0"

# The dependencies in this group are installed using pipx instead of Poetry. It is necessary to use a poetry section in
# order to get Dependabot updates of the dependencies.
[tool.poetry.group.pipx.dependencies]
poetry = "1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
