[tool.poetry]
name = "inoplatforms"
version = "0.0.0"
description = ""
authors = ["per1234 <nope@example.com>"]

[tool.poetry.dependencies]
python = "3.11.*"

[tool.poetry.group.dev.dependencies]
codespell = "2.3.0"
svgcheck = "0.8.1"
yamllint = "1.35.1"

# The dependencies in this group are installed using pipx instead of Poetry. It is necessary to use a poetry section in
# order to get Dependabot updates of the dependencies.
[tool.poetry.group.pipx.dependencies]
poetry = "1.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
