[tool.poetry]
name = "inoplatforms"
version = "0.0.0"
description = ""
authors = ["per1234 <nope@example.com>"]

[tool.poetry.dependencies]
python = "3.11.*"

[tool.poetry.group.dev.dependencies]
codespell = "2.4.1"
svgcheck = "0.10.0"
yamllint = "1.37.0"

# The dependencies in this group are installed using pipx instead of Poetry. It is necessary to use a poetry section in
# order to get Dependabot updates of the dependencies.
[tool.poetry.group.pipx.dependencies]
poetry = "1.8.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
